# GelMA_MD_simulation_project

./: .gitignore  README.md  methods.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analysis/: analysis_config.py  data_analysis.py  nvt_thermo.py
docs/: PIPELINE_DESIGN.md  REPLICA_WORKFLOW.md  SUBSYSTEM_PIPELINE.md
example/: NVT.conf  config.example.json  demo_calc.py  npt_1.conf  npt_2.conf  npt_3.conf
forcefield/: README.md  lma.prm  par_all36m_prot_hyp.prm  par_ions.prm  top_all36_prot_HYP_caf_3.txt
lammps/bulk_modulus/: bulk_from_xst.py  eval_xst_convergence.py  in.bulk.postxlink.template  in.bulk.template  prep_bulk.py  run_bulk.py
lammps/crosslink/: crosslink_config_chiu.yaml  in.crosslink.template  step.lmps.template
lammps/tools/: build_lammps_gpu.sh  generate_xlink_fix.py  parmed_emit_lammps.py  polymatic_driver.py
pipeline/: __init__.py  calculation.py  config.py  namd_runner.py  packmol_runner.py  paths.py  pdb_utils.py  pipeline.py  pre_process.py  psfgen_runner.py  segments.py
plotting/: _shared.py  data_collect.py  plot_merge.py  plot_merged.py  plot_per_system.py  time_block_analysis.py
render/: auto_render.tcl
workflow/: auto_extend.py  clone_subproject.py  main.py  run_batch_workflow1.py  workflow2.py
